# misp-modules

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  ChangeLog.md  Makefile  Pipfile  README.md  REQUIREMENTS  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: codeql.yml  git_help.yml  git_lint.yml  git_release.yml  git_release_check.yml  lint copy.yml  lint.yml  python-package.yml  release-package.yml  reviewdog.yml  shellcheck.yml  sysdig_cis_dockerfile_benchmark.yml  test-package.yml  vulnerable_dependencies.yml  workflow.yml
.gtihub/workflows/: lint.yml  reviewdog.yml
1.0.0/misp-reversinglabs/: INSTALL.md  LICENSE  MAPPING_DSL.md  README.md  rl_enrichment.py
action_mod/: index.html
contribute/: index.html
doc/: README.md  documentation.md  generate_documentation.py  markdown.md
doc/expansion/: apiosintds.json  apivoid.json  asn_history.json  assemblyline_query.json  assemblyline_submit.json  backscatter_io.json  bgpranking.json  btc.json  btc_scam_check.json  censys_enrich.json  circl_passivedns.json  circl_passivessl.json  countrycode.json  cpe.json  crowdstrike_falcon.json  cuckoo_submit.json  cve.json  cve_advanced.json  cytomic_orion.json  dbl_spamhaus.json  dns.json  docx-enrich.json  docx_enrich.json  domaintools.json  eql.json  eupi.json  farsight_passivedns.json  geoip_asn.json  geoip_city.json  geoip_country.json  google_search.json  greynoise.json  hashdd.json  hibp.json  html_to_markdown.json  intel471.json  intelmq_eventdb.json  ipasn.json  iprep.json  joesandbox_query.json  (+44 more)
doc/export_mod/: cef_export.json  cisco_firesight_manager_ACL_rule_export.json  goamlexport.json  liteexport.json  mass_eql_export.json  nexthinkexport.json  osqueryexport.json  pdfexport.json  testexport.json  threatStream_misp_export.json  threat_connect_export.json  vt_graph.json
doc/import_doc/: csvimport.json  cuckooimport.json  email_import.json  goamlimport.json  mispjson.json  ocr.json  openiocimport.json  stiximport.json  threatanalyzer_import.json  vmray_import.json
doc/import_mod/: csvimport.json  cuckooimport.json  goamlimport.json  joe_import.json  lastline_import.json  mispjson.json  ocr.json  openiocimport.json  vmray_import.json
docker/: Dockerfile
docker/files/: entrypoint.sh  healthcheck.sh
docs/: contribute.md  index.md  install.md  logos
documentation/: README.md  generate.py  generate_documentation.py  migrate_web_json_to_module.py
documentation/mkdocs/: REQUIREMENTS.txt  action_mod.md  contribute.md  expansion.md  export_mod.md  import_mod.md  index.md  install.md
etc/logrotate.d/: misp-modules
expansion/: index.html
export_mod/: index.html
helpers/: cache.py
import_mod/: index.html
install/: index.html
license/: index.html
misp_modules/: __init__.py  __main__.py  openapi.py
misp_modules/helpers/: cache.py
misp_modules/lib/: __init__.py  joe_mapping.py  joe_parser.py  lastline_api.py  qintel_helper.py  stix2misp.py
misp_modules/modules/: __init__.py
modules/expansion/: asn_history.py  circl_passivedns.py  cve.py  dns.py  eupi.py  intelmq_eventdb.py.experimental  ipasn.py  passivetotal.py  sourcecache.py
search/: search_index.json
tests/: body.json  body_timeout.json  bodycircl_passivedns.json.sample  bodyhashdd.json  bodypassivetotal.json.sample  bodysourcecache.json  bodyvirustotal.json.sample  expansion_configs.json  goamlexport.xml  openioc.xml  query-circl_passivessl.sh  query-cve.sh  query-dns.sh  query-hashdd.sh  query-sourcecache.sh  search-modules.sh  test.py  test_actions.py  test_attachment.eml  test_email_import_forwarded.py  test_email_import_subject_markers.py  test_expansions.py  test_exports.py  test_generic_json_import.py  test_html_to_markdown.py  test_imports.py  test_no_attach.eml  test_ransomlook.py  test_rdap.py  test_rst_ioc.py  test_rst_noise_control.py  test_rst_ssl.py  test_xposedornot.py  test_yara.py  threatconnect_export_test.py  yara_hash_module_test.yara  yara_pe_module_test.yara  yara_test.py
tests/gpg/: test_org_gpg
tests/test_files/: misp_event.json  test.docx  test.ods  test.odt  test.pptx  test.xlsx
tools/: misp-builddb.py  misp-source-confidence.json.example  update_misp_modules.sh
webiste/: README.md  pyproject.toml  requirements.txt
website/: .flake8  .gitignore  README.md  app.py  app_creation.py  config.py  install.sh  launch.py  launch.sh  main.py  migrate.py  migrate.sh  pyproject.toml  requirements.txt  sample.env
website/app/: __init__.py  home.py  home_core.py  session.py  session_class.py
website/app/account/: account.py  form.py
website/app/assets/: package-lock.json  package.json  vite.config.mjs  vite.editor.config.js  vite.markdown-it.config.js  vite.mermaid-markdown.config.js
website/app/assets/src/css/: core.css
website/app/assets/src/js/: editor.js  markdown-it.js  mermaid-markdown.js
website/app/db_class/: db.py
website/app/external_tools/: external_tools.py  external_tools_core.py  form.py
website/app/history/: history.py  history_core.py
website/app/models/: __init__.py  models.py
website/app/static/css/: core.css  json-tree-view.css
website/app/static/js/: editor.js  history_view.js  markdown-it.js  mermaid-markdown.js  mispParser.js  toaster.js  utils.js
website/app/static/js/history/: history_tree_query.js  history_view.js
website/app/templates/: 404.html  base.html  history.html  history_session.html  home.html  modules_config.html  query.html  sidebar.html
website/app/templates/account/: login.html
website/app/templates/external_tools/: add_external_tool.html  external_tools_index.html
website/app/templates/macros/: check_password.html  form_macros.html
website/app/utils/: __init__.py  init_modules.py  utils.py
website/conf/: config.cfg.sample  config.py
website/migrations/versions/: 01de07e2686a_.py  0b5e7db16af8_.py  0c02b861944b_.py  0d3b152688fe_.py  183bf8fa2b87_.py  1d38ae8361a7_.py  206e0e808b0c_.py  3a631d400f60_.py  91f830996ff4_.py  c0e243696052_.py  d6f8bfc9d454_.py  ef119b41c5f2_.py
(+557 files in other folders)
